# 488_final

./: README.md  analog_channel_fr_v1_0_S00_AXI.v  cookieclicker.txt
SA2_final_project/: SA2_final_project.xpr
SA2_final_project/SA2_final_project.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
digital_channel/: edit_digital_channel_v1_0.xpr
digital_channel/digital_channel_1.0/: component.xml
gui/: CMakeLists.txt  README.md
gui/include/: Decoder.hpp  DecoderWindow.hpp  MainWindow.hpp  SerialManager.hpp  SerialScanner.hpp
gui/src/: Decoder.cpp  DecoderWindow.cpp  MainWindow.cpp  SerialManager.cpp  main.cpp
ip_repo/: edit_analog_channel_final_v1_0.xpr  edit_analog_channel_la_v1_0.xpr  edit_analog_channel_v1_0.xpr  edit_axi_digital_channel_v1_0.xpr  edit_digital_channel_la_v1_0.xpr  edit_the_analog_channel_v1_0.xpr
ip_repo/analog_channel_1.0/: component.xml
ip_repo/analog_channel_final_1.0/: component.xml
ip_repo/analog_channel_fr_1.0/: component.xml
ip_repo/analog_channel_la_1.0/: component.xml
ip_repo/analog_channel_real_1.0/: component.xml
ip_repo/axi_digital_channel_1.0/: component.xml
ip_repo/digital_channel_la_1.0/: component.xml
ip_repo/the_analog_channel_1.0/: component.xml
scripts/: get_channel.py  set_channel.py
sw/: .analytics
sw/.metadata/: version.ini
sw/final_proj_wrapper/: .cproject  .project  platform.spr
sw/final_project/: .cproject  .project  final_project.prj
sw/final_project_system/: .cproject  .project  final_project_system.sprj
(+1564 files in other folders)
